[package]
name = "yaws-rs"
version = "0.1.0"
authors = ["Eunchul <eunchul.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { git = "https://github.com/tokio-rs/mio" }
tungstenite = "*"
slab = "0.4"
log = "0.4"
env_logger = "0.7"

[dev-dependencies]
